--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -107,7 +107,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
                 <a
-                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '', true);">
+                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '&handsfree=false', true);">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -122,12 +122,45 @@
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                 <div id="warning-hmd-1">
                     In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
+                    The HMD must have a button or there should be a joystick available.
                 </div>
                 </p>
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                <div id="warning-vr">
+                <div class="warning-vr">
+                    It may be necessary to accept the installation of <a
+                        href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                        target="_blank">Google Virtual Reality services</a>
+                    on the first access.
+                </div>
+                </p>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+
+                <a
+                    href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '&handsfree=true', true);">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />
+                            <div id="vr2">Virtual Reality (Handsfree)</div>
+                        </div>
+                    </div>
+                </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                <div id="warning-hmd-2">
+                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
+                </div>
+                </p>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                <div class="warning-vr">
                     It may be necessary to accept the installation of <a
                         href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
                         target="_blank">Google Virtual Reality services</a>
@@ -258,6 +291,12 @@
         );
 
         TRANSLATION.add(
+            '#vr2',
+            'Virtual Reality (Handsfree)',
+            'Realidade Virtual (Handsfree)'
+        );
+
+        TRANSLATION.add(
             '#warning-fiducial',
             `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
             `É necessário imprimir o marcador fiducial para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
@@ -266,12 +305,20 @@
 
         TRANSLATION.add(
             '#warning-hmd-1',
-            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display).`,
-            `Para uma experiência completa no modo RV, é necessário usar um HMD (head-mounted display).`
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display). 
+            The HMD must have a button or there should be a joystick available.`,
+            `Para uma experiência completa no modo RV, é necessário usar um HMD (head-mounted display).
+            Precisa-se que o HMD tenha algum botão ou algum joystick esteja disponível.`
         );
 
         TRANSLATION.add(
-            '#warning-vr',
+            '#warning-hmd-2',
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display), but there is no requirement for HMD buttons or joystick.`,
+            `Para uma experiência completa no modo RV, é necessário usar um HMD (head-mounted display), mas não é preciso haver botão no HMD ou algum joystick.`
+        );
+
+        TRANSLATION.add(
+            '.warning-vr',
             ` It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
                                                                         target="_blank">Google Virtual Reality services</a>
                         on the first access. `,
