--- a/index.html
+++ b/index.html
@@ -370,6 +370,12 @@
         );
 
         TRANSLATION.add(
+            '#circuits',
+            'Eletic Circuits',
+            'Circuitos Elétricos'
+        )
+
+        TRANSLATION.add(
             '#about-header',
             'About',
             'Sobre'
