--- a/projects/circuits.html
+++ b/projects/circuits.html
@@ -38,7 +38,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="src/circuits-application.html" height="500"
+            <iframe id="scene" class="w3-col l8" src="src/circuits-application-VR.html" height="500"
                 style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -61,7 +61,8 @@
         <div class="w3-row-padding">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/circuits-application.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/circuits-application-VR.html', '', true);"
+                    style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Circuits/blur.png') center;">
                         <div class="w3-padding" style="width:100%">
@@ -102,8 +103,8 @@
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide-horizontal" src="./img/Circuits/screenshot1-VR.png" onclick="openModal(1)">
-            <img class="slide-horizontal" src="./img/Circuits/screenshot2-VR.png" onclick="openModal(2)">
+            <img class="slide-horizontal slide" src="./img/Circuits/screenshot1-VR.png" onclick="openModal(1)">
+            <img class="slide-horizontal slide" src="./img/Circuits/screenshot2-VR.png" onclick="openModal(2)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">
                 &#10094;
@@ -135,6 +136,10 @@
     </footer>
     <script src="../js/script.js"></script>
     <script>
+        TRANSLATION.onTranslate = function () {
+            document.querySelector('#scene').contentWindow.changeLanguage(TRANSLATION.currentLang);
+        }
+
         TRANSLATION.add(
             '#header',
             'Eletric Circuits',
