projectile-motion ar pt-br changed

--- a/projects/src/projectile-motion-application-AR.html
+++ b/projects/src/projectile-motion-application-AR.html
@@ -102,8 +102,8 @@
                 let reportLabel = document.getElementById("report");
 
 
-                heightLabel.innerHTML = "Height: " + height + ".0m"
-                velocityLabel.innerHTML = "Velocity: " + velocity + ".0m/s"
+                heightLabel.innerHTML = "Altura: " + height + ".0m"
+                velocityLabel.innerHTML = "Velocidade: " + velocity + ".0m/s"
                 reportLabel.style.display = "none";
                 chancesLabel.innerHTML = "Chances: " + chances;
 
@@ -288,8 +288,8 @@
 
 <body>
     <div id="bar">
-        <div id="height">Height: __._m</div>
-        <div id="velocity">Velocity: __._m/s</div>
+        <div id="height"> Height: __._m</div>
+        <div id="velocity"> Velocity: __._m/s</div>
         <div id="distance"> Distance: __._m</div>
         <div id="start" onclick="start()">Start Simulation</div>
     </div>
