--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -95,6 +95,16 @@
             border-radius: 8%;
             cursor: pointer;
         }
+        #show {
+            width: 100;
+            display: block;
+            font-size: 0.8em;
+            margin-top: 3px;
+            text-align: center;
+            border: rgb(120, 120, 120) solid 2px;
+            border-radius: 8%;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -110,6 +120,7 @@
         <li id="time" class="middle">Time:</li>
         <li id="t" class="bottom">t: -</li>
         <li id="drop">Drop Box</li>
+        <li id="show">Show Info</li>
     </ul>
 
     <div id="info">
