projectile-motion AR pt-br adjusted

--- a/projects/src/projectile-motion-application-AR.html
+++ b/projects/src/projectile-motion-application-AR.html
@@ -102,8 +102,8 @@
                 let reportLabel = document.getElementById("report");
 
 
-                heightLabel.innerHTML = "Altura: " + height + ".0m"
-                velocityLabel.innerHTML = "Velocidade: " + velocity + ".0m/s"
+                heightLabel.innerHTML = "Height: " + height + ".0m"
+                velocityLabel.innerHTML = "Velocity: " + velocity + ".0m/s"
                 reportLabel.style.display = "none";
                 chancesLabel.innerHTML = "Chances: " + chances;
 
@@ -134,7 +134,7 @@
 
                 this.distaceLabel = document.getElementById("distance");
                 this.heightLabel = document.getElementById("height");
-                this.velocityLabel = document.getElementById('velocity');
+                this.velocityLabel = document.getElementById("velocity");
                 this.chancesLabel = document.getElementById("chances");
                 this.reportLabel = document.getElementById("report");
 
@@ -147,8 +147,8 @@
                 this.randomizeValues();
                 
                 
-                this.heightLabel.innerHTML = "Height: " + height + ".0m"
-                this.velocityLabel.innerHTML = "Velocity: " + velocity + ".0m/s"
+                this.heightLabel.innerHTML = "Altura: " + height + ".0m"
+                this.velocityLabel.innerHTML = "Velocidade: " + velocity + ".0m/s"
                 setTimeout(() => {
                     document.getElementById("bar").style.display = "block";
                     document.getElementById("chances").style.display = "block";
